<resources>
    <string name="app_name">Rook Training</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="uuid_placeholder">UUID: $1$s</string>
    <string name="email_placeholder">Email: $1$s</string>
    <string name="menu">Menu</string>
    <string name="individual_training">Individual training</string>
    <string name="training_types">Training types</string>
    <string name="there_was_an_error">There was an error</string>
    <string name="retry">Retry</string>
    <string name="grant_permissions">Grant permissions</string>
    <string name="permissions_are_needed_for_some_features">Permissions are needed for some features</string>
    <string name="location_permissions_are_required">Location permissions are required</string>
    <string name="bluetooth_permissions_are_required">Bluetooth permissions are required</string>
    <string name="gps_is_required">GPS is required</string>
    <string name="bluetooth_is_required">Bluetooth is required</string>
    <string name="no_trainings_types_available">No trainings types available</string>
    <string name="touch_to_connect">Touch to connect</string>
    <string name="sensor_scanner">Sensor scanner</string>
    <string name="unknown_sensor">Unknown sensor</string>
    <string name="connected">Connected</string>
    <string name="connected_to_placeholder">Connected to: %1$s</string>
    <string name="sensor_linked">Sensor was linked to user</string>
    <string name="error_internal_bluetooth">Internal bluetooth error</string>
    <string name="error_already_scanning">The device is already scanning</string>
    <string name="error_not_supported">This device does not support BLE scanning</string>
    <string name="error_no_resources">Device\'s bluetooth is overloaded</string>
    <string name="error_too_much_scans">Scanning to frequently, bluetooth is overloaded</string>
    <string name="choose_a_sensor">Choose a sensor</string>
    <string name="training_type">Training type</string>
    <string name="time">Time</string>
    <string name="heart_rate">Heart rate (bpm)</string>
    <string name="calories">Calories (kcal)</string>
    <string name="steps">Steps</string>
    <string name="jumps">Jumps</string>
    <string name="heart_effort">Effort (%)</string>
    <string name="battery_level">Sensor battery level</string>
    <string name="thanks">Thanks</string>
    <string name="connecting_with_sensor">Connecting with sensor: %1$s …</string>
    <string name="could_not_connect">Could not connect, try again</string>
    <string name="sensor_connection_lost">The connection with your sensor has been lost</string>
    <string name="what_do_you_want_to_do">What do you want to do?</string>
    <string name="theres_a_training_running">Theres a training running right now</string>
    <string name="dismiss">Dismiss</string>
    <string name="cancel_training">Cancel training</string>
    <string name="finish_training">Finish training</string>
    <string name="training_summary">Training summary</string>
    <string name="basic_information">Basic information</string>
    <string name="start_date">Start date</string>
    <string name="summaries">Summaries</string>
    <string name="individual_records">Individual records</string>
    <string name="number_of_steps_records">Number of steps records</string>
    <string name="number_of_hr_records">Number of heart rate records</string>
    <string name="training_name">Training name</string>
    <string name="end_date">End date</string>
    <string name="duration">Duration</string>
    <string name="effort_min_avg_max_placeholder"><![CDATA[Effort: Min -> %1$s | Avg -> %2$s | Max -> %3$s]]></string>
    <string name="hr_min_avg_max_placeholder"><![CDATA[Heart rate: Min -> %1$s | Avg -> %2$s | Max -> %3$s]]></string>
    <string name="remote_training">Remote training</string>
</resources>