<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.training.summary.TrainingSummaryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/training_summary"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <include
            android:id="@+id/progress"
            layout="@layout/ui_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/basic_information"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/training_name"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

        <TextView
            android:id="@+id/training_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            tools:text="Individual training" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/training_type"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

        <TextView
            android:id="@+id/training_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            tools:text="Running" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_date"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

        <TextView
            android:id="@+id/start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            tools:text="March 16, 2022 10:56 am" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

        <TextView
            android:id="@+id/end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            tools:text="March 16, 2022 11:56 am" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/summaries"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            tools:text="1500" />

        <TextView
            android:id="@+id/steps_types"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/steps"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

        <TextView
            android:id="@+id/steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            tools:text="2388" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calories"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

        <TextView
            android:id="@+id/calories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            tools:text="1500" />

        <TextView
            android:id="@+id/effort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            tools:text="@string/effort_min_avg_max_placeholder" />

        <TextView
            android:id="@+id/heart_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            tools:text="@string/hr_min_avg_max_placeholder" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/individual_records"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_of_hr_records"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

        <TextView
            android:id="@+id/heart_rate_records"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            tools:text="1500" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_of_steps_records"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

        <TextView
            android:id="@+id/steps_records"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            tools:text="1500" />
    </LinearLayout>
</ScrollView>