<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.training.solo.TrainingSoloActivity">

    <LinearLayout
        android:id="@+id/base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/zone_0"
        android:orientation="vertical"
        android:padding="20dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back"
            style="@style/Widget.RookMotion.Button.Back.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/choose_sensor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/sensor_state"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_sensor_off"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/sensor_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:text="@string/choose_a_sensor"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_arrow_forward"
                app:tint="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/training_type_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_training_type"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/training_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:text="@string/training_type"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/white" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="00:00:00"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heart_rate"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/heart_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:text="150" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calories"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/calories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:text="1500" />

        <TextView
            android:id="@+id/steps_types"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/steps"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/white"
            android:visibility="gone" />

        <TextView
            android:id="@+id/steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="gone"
            tools:text="2388" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heart_effort"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/effort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:text="90" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/battery_level"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/battery_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:text="90" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/stop"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="25dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_stop"
                android:visibility="gone"
                app:tint="@color/white" />

            <ImageView
                android:id="@+id/pause"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:contentDescription="@null"
                android:src="@drawable/ic_pause"
                android:visibility="gone"
                app:tint="@color/white" />

            <ImageView
                android:id="@+id/play"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:contentDescription="@null"
                android:src="@drawable/ic_play"
                app:tint="@color/white" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>